--- a/styles/style.css
+++ b/styles/style.css
@@ -81,6 +81,7 @@ main{
     margin: 0px 0px;
     justify-content: center;
 }
+/* -------------section-one----------------- */
 .section-1{
     display: flex;
     align-items: center;
@@ -334,6 +335,8 @@ footer{
         
         
     }
+
+    /* --------------section-one----------- */
     .section-1{
         display: grid;
         grid-template-columns: repeat(1,1fr);
@@ -351,7 +354,7 @@ footer{
     text-align: left;
     
 }
-/* --------section 2--------- */
+/* ------------------section 2--------------------- */
 .section-2{
     display:;
     grid-template-columns: repeat(1,1fr);
@@ -374,6 +377,7 @@ footer{
     margin-left: 100px;
     margin-top: 25px;
 }
+/*------------------section-three------------- */
 
 .section-3{
     margin: 0 0 0 30px;
@@ -382,15 +386,18 @@ footer{
     height: 300px;
     
 }
-/* ----section four------- */
+/* ------------------section four----------------- */
 .section-four{
     display: grid;
     grid-template-columns: repeat(1,1fr);
     margin: 0 0px 0 30px;
 }
+/* ----------------section five--------------- */
 .section-5{
     padding: 0px;
 }
+
+/*---------------section-six--------------- */
 .section-six{
     display: grid;
     grid-template-columns: repeat(1,1fr);
@@ -399,15 +406,13 @@ footer{
 .section-six img{
     margin-bottom: 50px;
 }
+
+/* ---------------section seven---------------- */
 .section-seven{
     display: none;
-    grid-template-columns: repeat(1,1fr);
+    
 }
-.section-seven img{
-    width: 100%;
-    height: 400px;
-    margin-bottom: 100px;
-}
+/*-----------------this is footer-------------- */
 footer{
     margin: 35px;
 }
